language/move-lang/tests/move_check/typing/instantiate_signatures.exp
error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:11:13 ───
    │
 11 │         f1: S<R>,
    │             ^^^^ Constraint not satisfied.
    ·
 11 │         f1: S<R>,
    │               - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:12:13 ───
    │
 12 │         f2: S<&u64>,
    │             ^^^^^^^ Invalid type argument
    ·
 12 │         f2: S<&u64>,
    │               ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:13:13 ───
    │
 13 │         f3: &(&u64),
    │             ^^^^^^^ Invalid reference type
    ·
 13 │         f3: &(&u64),
    │              ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:13:13 ───
    │
 13 │         f3: &(&u64),
    │             ^^^^^^^ Invalid field type
    ·
 13 │         f3: &(&u64),
    │             ------- Expected a single non-reference type, but found: '&&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:14:13 ───
    │
 14 │         f4: S<(u64, u64)>,
    │             ^^^^^^^^^^^^^ Invalid type argument
    ·
 14 │         f4: S<(u64, u64)>,
    │               ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:18:14 ───
    │
 18 │         _f1: S<R>,
    │              ^^^^ Constraint not satisfied.
    ·
 18 │         _f1: S<R>,
    │                - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:19:14 ───
    │
 19 │         _f2: S<&u64>,
    │              ^^^^^^^ Invalid type argument
    ·
 19 │         _f2: S<&u64>,
    │                ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:20:14 ───
    │
 20 │         _f3: &(&u64),
    │              ^^^^^^^ Invalid reference type
    ·
 20 │         _f3: &(&u64),
    │               ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:21:14 ───
    │
 21 │         _f4: S<(u64, u64)>,
    │              ^^^^^^^^^^^^^ Invalid type argument
    ·
 21 │         _f4: S<(u64, u64)>,
    │                ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:23:9 ───
    │
 23 │         S<R>,
    │         ^^^^ Constraint not satisfied.
    ·
 23 │         S<R>,
    │           - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:24:9 ───
    │
 24 │         S<&u64>,
    │         ^^^^^^^ Invalid type argument
    ·
 24 │         S<&u64>,
    │           ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:25:9 ───
    │
 25 │         &(&u64),
    │         ^^^^^^^ Invalid reference type
    ·
 25 │         &(&u64),
    │          ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:26:9 ───
    │
 26 │         S<(u64, u64)>,
    │         ^^^^^^^^^^^^^ Invalid type argument
    ·
 26 │         S<(u64, u64)>,
    │           ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:32:17 ───
    │
 32 │         let f1: S<R> = abort 0;
    │                 ^^^^ Constraint not satisfied.
    ·
 32 │         let f1: S<R> = abort 0;
    │                   - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:33:17 ───
    │
 33 │         let f2: S<&u64> = abort 0;
    │                 ^^^^^^^ Invalid type argument
    ·
 33 │         let f2: S<&u64> = abort 0;
    │                   ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:34:17 ───
    │
 34 │         let f3: &(&u64) = abort 0;
    │                 ^^^^^^^ Invalid reference type
    ·
 34 │         let f3: &(&u64) = abort 0;
    │                  ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:35:17 ───
    │
 35 │         let f4: S<(u64, u64)> = abort 0;
    │                 ^^^^^^^^^^^^^ Invalid type argument
    ·
 35 │         let f4: S<(u64, u64)> = abort 0;
    │                   ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:37:9 ───
    │
 37 │         id<S<R>>(abort 0);
    │         ^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 37 │         id<S<R>>(abort 0);
    │            ---- The type: '0x42::M::S<0x42::M::R>'
    ·
  4 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:37:12 ───
    │
 37 │         id<S<R>>(abort 0);
    │            ^^^^ Constraint not satisfied.
    ·
 37 │         id<S<R>>(abort 0);
    │              - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:38:12 ───
    │
 38 │         id<S<&u64>>(abort 0);
    │            ^^^^^^^ Invalid type argument
    ·
 38 │         id<S<&u64>>(abort 0);
    │              ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:39:9 ───
    │
 39 │         id<&(&u64)>(abort 0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid type argument
    ·
 39 │         id<&(&u64)>(abort 0);
    │            ------- Expected a single non-reference type, but found: '&&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:39:12 ───
    │
 39 │         id<&(&u64)>(abort 0);
    │            ^^^^^^^ Invalid reference type
    ·
 39 │         id<&(&u64)>(abort 0);
    │             ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:40:12 ───
    │
 40 │         id<S<(u64, u64)>>(abort 0);
    │            ^^^^^^^^^^^^^ Invalid type argument
    ·
 40 │         id<S<(u64, u64)>>(abort 0);
    │              ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:42:9 ───
    │
 42 │         S<S<R>> {};
    │         ^^^^^^^^^^ Constraint not satisfied.
    ·
 42 │         S<S<R>> {};
    │           ---- The resource type '0x42::M::S<0x42::M::R>' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:42:9 ───
    │
 42 │         S<S<R>> {};
    │         ^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 42 │         S<S<R>> {};
    │         ---------- The type: '0x42::M::S<0x42::M::S<0x42::M::R>>'
    ·
  4 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:42:11 ───
    │
 42 │         S<S<R>> {};
    │           ^^^^ Constraint not satisfied.
    ·
 42 │         S<S<R>> {};
    │             - The resource type '0x42::M::R' does not satisfy the constraint 'copyable'
    ·
  4 │     resource struct R {}
    │     -------- The type's constraint information was determined here
    ·
  3 │     struct S<T: copyable> {}
    │                 -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:43:11 ───
    │
 43 │         S<S<&u64>> {};
    │           ^^^^^^^ Invalid type argument
    ·
 43 │         S<S<&u64>> {};
    │             ---- Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:44:9 ───
    │
 44 │         S<&(&u64)> {};
    │         ^^^^^^^^^^^^^ Invalid type argument
    ·
 44 │         S<&(&u64)> {};
    │           ------- Expected a single non-reference type, but found: '&&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:44:11 ───
    │
 44 │         S<&(&u64)> {};
    │           ^^^^^^^ Invalid reference type
    ·
 44 │         S<&(&u64)> {};
    │            ------ Expected a single non-reference type, but found: '&u64'
    │

error: 

    ┌── tests/move_check/typing/instantiate_signatures.move:45:11 ───
    │
 45 │         S<S<(u64, u64)>> {};
    │           ^^^^^^^^^^^^^ Invalid type argument
    ·
 45 │         S<S<(u64, u64)>> {};
    │             ---------- Expected a single non-reference type, but found: '(u64, u64)'
    │

